@@ -1,21 +1,24 @@
 package com.travelland.service.trip;
 
+import com.travelland.document.TripSearchDoc;
 import com.travelland.domain.member.Member;
-import com.travelland.domain.Trip;
-import com.travelland.domain.TripHashtag;
+import com.travelland.domain.trip.Trip;
+import com.travelland.domain.trip.TripHashtag;
 import com.travelland.dto.TripDto;
+import com.travelland.dto.TripSearchDto;
 import com.travelland.global.exception.CustomException;
 import com.travelland.global.exception.ErrorCode;
 import com.travelland.repository.member.MemberRepository;
 import com.travelland.repository.trip.TripHashtagRepository;
 import com.travelland.repository.trip.TripRepository;
+import com.travelland.repository.trip.TripSearchRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,30 +27,38 @@ public class TripService {
     private final TripRepository tripRepository;
     private final MemberRepository memberRepository;
     private final TripHashtagRepository tripHashtagRepository;
+    private final TripSearchRepository tripSearchRepository;
+    private final StringRedisTemplate redisTemplate;
     private final TripImageService tripImageService;
     private final TripLikeService tripLikeService;
     private final TripScrapService tripScrapService;
+
+    private static final String TOTAL_ELEMENTS = "trip:totalElements";
 
     @Transactional
     public TripDto.Id createTrip(TripDto.Create requestDto, List<MultipartFile> imageList, String email) {
         Member member = memberRepository.findByEmail(email).orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
         Trip trip = tripRepository.save(new Trip(requestDto, member));//여행정보 저장
 
+        TripSearchDto.CreateRequest request = new TripSearchDto.CreateRequest(trip, requestDto.getHashTag());
+        tripSearchRepository.save(new TripSearchDoc(request));
+
         if (!requestDto.getHashTag().isEmpty()) //해쉬태그 저장
             requestDto.getHashTag().forEach(hashtagTitle -> tripHashtagRepository.save(new TripHashtag(hashtagTitle, trip)));
 
-//        if (!imageList.isEmpty()) //여행정보 이미지 정보 저장
-//            tripImageService.createTripImage(imageList, trip);
+        if (!imageList.isEmpty()) //여행정보 이미지 정보 저장
+            tripImageService.createTripImage(imageList, trip);
+
+        redisTemplate.opsForValue().increment(TOTAL_ELEMENTS);
 
         return new TripDto.Id(trip.getId());
     }
 
-    @Transactional(readOnly = true)
-    public List<TripDto.GetList> getTripList(int page, int size, String sort, boolean ASC) {
-        return tripRepository.getTripList(page, size, sort, ASC)
-                .stream()
-                .map(trip -> new TripDto.GetList(trip, tripImageService.getTripImageThumbnailUrl(trip)))
-                .toList();
+    public List<TripDto.GetList> getTripList(int page, int size, String sortBy, boolean isAsc) {
+        return tripRepository.getTripList(page, size, sortBy, isAsc)
+                        .stream()
+                        .map(trip -> new TripDto.GetList(trip, tripImageService.getTripImageThumbnailUrl(trip)))
+                        .toList();
     }
 
     @Transactional
@@ -103,6 +114,8 @@ public class TripService {
 
         tripHashtagRepository.deleteByTrip(trip);
         tripRepository.delete(trip);
+
+        redisTemplate.opsForValue().decrement(TOTAL_ELEMENTS);
     }
 
     @Transactional(readOnly = true)
@@ -110,16 +123,14 @@ public class TripService {
         return tripRepository.getMyTripList(page, size, getMember(email))
                 .stream()
                 .map(trip -> new TripDto.GetByMember(trip, tripImageService.getTripImageThumbnailUrl(trip)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Transactional(readOnly = true)
-    public List<TripDto.GetList> searchTripByHashtag(String hashtag, int page, int size, String sort, boolean ASC) {
-        return tripRepository.searchTripByHashtag(hashtag, page, size, sort, ASC)
-                .stream()
-                .map(trip -> new TripDto.GetList(trip, tripImageService.getTripImageThumbnailUrl(trip)))
-                .toList();
-
+    public List<TripDto.GetList> searchTripByHashtag(String hashtag, int page, int size, String sortBy, boolean isAsc) {
+        return tripRepository.searchTripByHashtag(hashtag, page, size, sortBy, isAsc)
+                        .stream()
+                        .map(trip -> new TripDto.GetList(trip, tripImageService.getTripImageThumbnailUrl(trip)))
+                        .toList();
     }
 
     private Member getMember(String email) {
